--- a/helm/cas-metabase/values-test.yaml
+++ b/helm/cas-metabase/values-test.yaml
@@ -23,3 +23,9 @@ metabase:
     enable: true
     # sslTermination: false
     hostName: cas-metabase-test.apps.silver.devops.gov.bc.ca
+
+image:
+  psql:
+    repository: gcr.io/ggl-cas-storage/cas-postgres
+    pullPolicy: Always
+    tag: "0.2.1"
