--- a/helm/cas-metabase/Chart.yaml
+++ b/helm/cas-metabase/Chart.yaml
@@ -11,3 +11,7 @@ dependencies:
   - name: metabase
     version: 0.12.1
     repository: file://../metabase
+  - name: cas-airflow-dag-trigger
+    version: 1.0.6
+    repository: https://bcgov.github.io/cas-airflow
+    alias: download-cas-metabase-dags
