--- a/helm/cas-metabase/values-test.yaml
+++ b/helm/cas-metabase/values-test.yaml
@@ -29,3 +29,6 @@ image:
     repository: gcr.io/ggl-cas-storage/cas-postgres
     pullPolicy: Always
     tag: "0.2.1"
+
+download-cas-metabase-dags:
+  airflowEndpoint: https://cas-airflow-test.apps.silver.devops.gov.bc.ca
