--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
           helm repo add charts-incubator https://charts.helm.sh/incubator
           helm repo add charts-stable https://charts.helm.sh/stable
           helm repo add cas-postgres https://bcgov.github.io/cas-postgres/
+          helm repo add cas-airflow https://bcgov.github.io/cas-airflow/
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
