--- a/helm/cas-metabase/templates/autoscaler.yaml
+++ b/helm/cas-metabase/templates/autoscaler.yaml
@@ -1,13 +1,15 @@
+{{- if .Values.metabaseHPA.enable }}
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: cas-metabase-hpa
+  name: {{ template "cas-metabase.fullname" . }}-hpa
 spec:
   scaleTargetRef:
     kind: Deployment
-    name: cas-metabase
+    name: {{ template "cas-metabase.fullname" . }}
     apiVersion: apps/v1
     subresource: scale
-  minReplicas: 1
-  maxReplicas: 10
+  minReplicas: {{ .Values.metabaseHPA.minReplicas }}
+  maxReplicas: {{ .Values.metabaseHPA.maxReplicas }}
   targetCPUUtilizationPercentage: 80
+{{- end }}
