--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -44,7 +44,7 @@ metabase:
       cpu: 1
       memory: 4Gi
     requests:
-      cpu: 250m
+      cpu: 50m
       memory: 2Gi
   podLabels:
     app.kubernetes.io/component: app
@@ -71,6 +71,9 @@ networkPolicies:
   enable: true
 
 restoreFromProd:
+  enable: false
+
+metabaseHPA:
   enable: false
 
 download-cas-metabase-dags:
