refactor: enable HPA in test instance

--- a/helm/cas-metabase/values-test.yaml
+++ b/helm/cas-metabase/values-test.yaml
@@ -32,3 +32,8 @@ image:
 
 download-cas-metabase-dags:
   airflowEndpoint: https://cas-airflow-test.apps.silver.devops.gov.bc.ca
+
+metabaseHPA:
+  enable: true
+  minReplicas: 2
+  maxReplicas: 5
