--- a/helm/cas-metabase/templates/cron-db-pass.yaml
+++ b/helm/cas-metabase/templates/cron-db-pass.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.restoreFromProd.enable }}
+{{- if index .Values "prod-test-restore" "enable" }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
