feat: remove nginx

--- a/helm/cas-metabase/templates/route.yaml
+++ b/helm/cas-metabase/templates/route.yaml
@@ -12,22 +12,11 @@ spec:
   host: {{ .Values.route.host }}
   port:
     targetPort: metabase
-{{- if .Values.metabase.nginxSidecar.sslTermination }}
   tls:
     insecureEdgeTerminationPolicy: Redirect
-    termination: passthrough
-{{- end }}
+    termination: edge
   to:
     kind: Service
     name:  {{ template "cas-metabase.fullname" . }}
     weight: 100
-  wildcardPolicy: None
-status:
-  ingress:
-  - conditions:
-    - status: 'True'
-      type: Admitted
-    host: {{ .Values.route.host }}
-    routerName: router
-    wildcardPolicy: None
 {{- end }}
