--- a/helm/cas-metabase/templates/cron-db-pass.yaml
+++ b/helm/cas-metabase/templates/cron-db-pass.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "prod-test-restore" "enable" }}
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ template "cas-metabase.fullname" . }}-db-pass
