--- a/helm/cas-metabase/templates/deployment.yaml
+++ b/helm/cas-metabase/templates/deployment.yaml
@@ -52,9 +52,9 @@ spec:
           {{- end }}
           - name: MB_EMOJI_IN_LOGS
             value: {{ .Values.emojiLogging | quote }}
-          {{- if .Values.siteUrl }}
+          {{- if .Values.router }}
           - name: MB_SITE_URL
-            value: {{ .Values.siteUrl | quote }}
+            value: https://{{ .Values.router.host }}
           {{- end }}
           ports:
             - containerPort: {{ .Values.service.internalPort }}
@@ -72,8 +72,7 @@ spec:
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
-          resources:
-{{ toYaml .Values.resources | indent 12 }}
+          resources: {{ toYaml .Values.resources | nindent 12 }}
 
 
 
