fix: the route points at the right port exposed by the service

--- a/helm/cas-metabase/templates/route.yaml
+++ b/helm/cas-metabase/templates/route.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   host: {{ .Values.route.host }}
   port:
-    targetPort: metabase
+    targetPort: {{ template "cas-metabase.fullname" . }}
   tls:
     insecureEdgeTerminationPolicy: Redirect
     termination: edge
