--- a/shipit.yml
+++ b/shipit.yml
@@ -4,6 +4,6 @@ deploy:
   override:
     - git submodule update --init
     - make install:
-        timeout: 300
+        timeout: 2000 # just a little over the 1800s timing out the helm release
 review:
   checklist: []
