--- a/helm/cas-metabase/templates/cron-prod-test-restore.yaml
+++ b/helm/cas-metabase/templates/cron-prod-test-restore.yaml
@@ -106,7 +106,13 @@ spec:
                   chmod 0600 .pgpass
                   echo RESTORING TO TEST...
                   pg_dump --no-password --format=custom metabase |
-                  PGPASSFILE=".pgpass" pg_restore --clean --exit-on-error --no-password -d $MB_DATABASE -h $MB_HOST -p $MB_PORT -U postgres
+                  PGPASSFILE=".pgpass" pg_restore --clean --if-exists --exit-on-error --no-password -d $MB_DATABASE -h $MB_HOST -p $MB_PORT -U postgres
+
+                  if [ $? -eq 0 ]; then
+                    touch /home/postgres/restore_completed
+                  else
+                    touch /home/postgres/restore_failed
+                  fi
               volumeMounts:
                 - mountPath: /home/postgres/
                   name: prod-restore
