--- a/helm/cas-metabase/templates/deployment.yaml
+++ b/helm/cas-metabase/templates/deployment.yaml
@@ -28,10 +28,15 @@ spec:
               set -euo pipefail;
 
               while true; do
+                echo 'Looking for restore flag in /home/postgres...'
                 if [ -f /home/postgres/restore_completed ]; then
+                  echo 'Restore from prod completed!'
+                  rm /home/postgres/restore_completed
                   exit 0
                 fi;
                 if [ -f /home/postgres/restore_failed ]; then
+                  echo 'Restore from prod failed. See cronjob logs for more details.'
+                  rm /home/postgres/restore_failed
                   exit 1
                 fi;
                 sleep 2;
