--- a/helm/cas-metabase/templates/pvc-prod-restore-flag.yaml
+++ b/helm/cas-metabase/templates/pvc-prod-restore-flag.yaml
@@ -2,14 +2,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ template "cas-metabase.fullname" . }}-prod-restore
+  name: {{ template "cas-metabase.fullname" . }}-prod-restore-flag
   labels: {{ include "cas-metabase.labels" . | nindent 4 }}
-
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
-  storageClassName: netapp-block-standard
+      storage: 25Mi
+  storageClassName: netapp-file-standard
 {{- end }}
