--- a/helm/cas-metabase/templates/job-reset-prod-restore-flag.yaml
+++ b/helm/cas-metabase/templates/job-reset-prod-restore-flag.yaml
@@ -1,3 +1,4 @@
+{{- if index .Values "prod-test-restore" "enable" }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -40,3 +41,4 @@ spec:
         - name: prod-restore-flag
           persistentVolumeClaim:
             claimName: {{ template "cas-metabase.fullname" . }}-prod-restore-flag
+{{- end }}
