--- a/helm/cas-metabase/templates/route.yaml
+++ b/helm/cas-metabase/templates/route.yaml
@@ -1,22 +1,39 @@
 {{- if .Values.route.enable }}
+{{- $route := (lookup "route.openshift.io/v1" "Route" .Release.Namespace "cas-metabase" ) }}
+{{- $certificate := "" }}
+{{- $key := "" }}
+{{- $caCertificate := "" }}
+{{- if $route }}
+{{- $certificate = $route.spec.tls.certificate }}
+{{- $key = $route.spec.tls.key }}
+{{- $caCertificate = $route.spec.tls.caCertificate }}
+{{- end -}}
+
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: {{ template "cas-metabase.fullname" . }}
   labels:
-{{ include "cas-metabase.labels" . | indent 4 }}
+{{ include "cas-metabase.labels" . | nindent 4 }}
+    certbot-managed: {{ .Values.route.certbotManaged }}
   annotations:
     haproxy.router.openshift.io/balance: roundrobin
 
 spec:
-  host: {{ .Values.route.host }}
+  host: {{ .Values.host }}
   port:
     targetPort: {{ template "cas-metabase.fullname" . }}
   tls:
-    insecureEdgeTerminationPolicy: Redirect
     termination: edge
+    insecureEdgeTerminationPolicy: Redirect
+    {{- if $certificate }}
+    certificate: {{ $certificate | quote }}
+    key: {{ $key | quote }}
+    caCertificate: {{ $caCertificate | quote }}
+    {{- end }}
   to:
     kind: Service
-    name:  {{ template "cas-metabase.fullname" . }}
+    name: {{ template "cas-metabase.fullname" . }}
     weight: 100
+  wildcardPolicy: None
 {{- end }}
