chore: update char.yamlt to pull certbot chart

--- a/helm/cas-metabase/Chart.yaml
+++ b/helm/cas-metabase/Chart.yaml
@@ -17,3 +17,6 @@ dependencies:
     repository: https://bcgov.github.io/cas-airflow
     alias: prod-test-restore
     condition: prod-test-restore.enable
+  - name: certbot
+    version: 0.1.3
+    repository: https://bcdevops.github.io/certbot
