chore: update values files to support certbot & temporary route

--- a/helm/cas-metabase/values-prod.yaml
+++ b/helm/cas-metabase/values-prod.yaml
@@ -21,6 +21,15 @@ cas-postgres:
 route:
   enable: true
   host: cas-metabase.nrs.gov.bc.ca
+  certbotManaged: true
+  enableTemporary: true
+  temporaryHost: cas-metabase-prod.apps.silver.devops.gov.bc.ca
+
+certbot:
+  certbot:
+    server:
+      secretName: cas-acme-url
+      secretKey: url
 
 download-cas-metabase-dags:
   airflowEndpoint: https://cas-airflow-prod.apps.silver.devops.gov.bc.ca
