chore: set image pullPolicy to IfNotPresent

--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -87,5 +87,7 @@ download-cas-metabase-dags:
     hook: "pre-install,pre-upgrade"
 
 certbot:
+  image:
+    pullPolicy: IfNotPresent
   certbot:
     email: ggircs@gov.bc.ca
