--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
           helm repo add charts-stable https://charts.helm.sh/stable
           helm repo add cas-postgres https://bcgov.github.io/cas-postgres/
           helm repo add cas-airflow https://bcgov.github.io/cas-airflow/
+          helm repo add certbot https://bcdevops.github.io/certbot
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
