--- a/helm/cas-metabase/templates/route.yaml
+++ b/helm/cas-metabase/templates/route.yaml
@@ -22,7 +22,7 @@ metadata:
     haproxy.router.openshift.io/balance: roundrobin
 
 spec:
-  host: {{ .Values.host }}
+  host: {{ .Values.route.host }}
   port:
     targetPort: {{ template "cas-metabase.fullname" . }}
   tls:
