chore: update cronjob cron expression to be greater than "every minute

--- a/helm/cas-metabase/templates/cron-db-pass.yaml
+++ b/helm/cas-metabase/templates/cron-db-pass.yaml
@@ -11,7 +11,7 @@ metadata:
     "helm.sh/hook-weight": "-5"
 spec:
   suspend: true
-  schedule: "* * * * *"
+  schedule: "0 * * * *"
   successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
