--- a/helm/cas-metabase/templates/cron-prod-test-restore.yaml
+++ b/helm/cas-metabase/templates/cron-prod-test-restore.yaml
@@ -11,7 +11,7 @@ metadata:
     "helm.sh/hook-weight": "-5"
 spec:
   suspend: true # This cron job is intended to be triggered manually
-  schedule: "* * * * *"
+  schedule: "0 * * * *"
   successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
