--- a/helm/cas-metabase/Chart.yaml
+++ b/helm/cas-metabase/Chart.yaml
@@ -20,3 +20,6 @@ dependencies:
   - name: certbot
     version: 0.1.3
     repository: https://bcdevops.github.io/certbot
+  - name: terraform-bucket-provision
+    version: "0.1.3"
+    repository: https://bcgov.github.io/cas-pipeline/
