chore: string expected for tf var

--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -94,5 +94,5 @@ certbot:
 
 terraform-bucket-provision:
   terraform:
-    namespace_apps: ["mb-backups"]
+    namespace_apps: '["mb-backups"]'
     workspace: metabase
