--- a/helm/patroni-migration/Chart.yaml
+++ b/helm/patroni-migration/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v2
 name: patroni-migration
-description: A Helm chart for Kubernetes
+description: A Helm chart to help with the database migration
 type: application
+
 version: 0.1.0
+
 appVersion: "1.0.0"
