chore: adding database migration job

--- a/helm/patroni-migration/templates/service-account.yaml
+++ b/helm/patroni-migration/templates/service-account.yaml
@@ -1,7 +1,7 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: {{ .Release.Name }}-deployment-manager
+  name: {{ .Release.Name }}-database-migration
   labels:
 {{ include "patroni-migration.labels" . | indent 4 }}
   annotations:
