--- a/helm/patroni-migration/templates/database-migration-job.yaml
+++ b/helm/patroni-migration/templates/database-migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment-{{ randAlphaNum 5 | lower }}
+  name: {{ template "patroni-migration.fullname" . }}-migrate-database-{{ randAlphaNum 5 | lower }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-50"
@@ -12,12 +12,12 @@ spec:
   backoffLimit: 10
   template:
     metadata:
-      name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment
+      name: {{ template "patroni-migration.fullname" . }}-migrate-database
       labels: {{ include "patroni-migration.labels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ .Release.Name }}-database-migration
       containers:
-        - name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment
+        - name: {{ template "patroni-migration.fullname" . }}-migrate-database
           resources:
             limits:
               cpu: 100m
@@ -25,9 +25,16 @@ spec:
             requests:
               cpu: 100m
               memory: 256Mi
-          image: bitnami/kubectl:1.26.13
+          image: {{ .Values.migrationJob.image }}:{{ .Values.migrationJob.tag }}
+          env:
+            - name: PGHOST
+            - name: PGPORT
+            - name: PGUSER
+            - name: PGPASSWORD
+              {{ template "patroni-migration.dbenv" "password" | indent 14 }}
+            - name: PGDATABASE
           command:
             - "bin/bash"
             - "-c"
-            - "kubectl scale --current-replicas={{ .Values.originalReplicasCount }} --replicas=0 deployment/cas-metabase"
+            - "pg_dumpall -g"
       restartPolicy: Never
