--- a/helm/patroni-migration/templates/role-binding.yaml
+++ b/helm/patroni-migration/templates/role-binding.yaml
@@ -1,7 +1,7 @@
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ .Release.Name }}-deployment-manager
+  name: {{ .Release.Name }}-database-migration
   labels:
 {{ include "patroni-migration.labels" . | indent 4 }}
   annotations:
@@ -11,8 +11,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Release.Name }}-deployment-manager
+  name: {{ .Release.Name }}-database-migration
 subjects:
   - kind: ServiceAccount
-    name: {{ .Release.Name }}-deployment-manager
+    name: {{ .Release.Name }}-database-migration
     namespace: {{ .Release.Namespace }}
