--- a/helm/patroni-migration/templates/role.yaml
+++ b/helm/patroni-migration/templates/role.yaml
@@ -9,7 +9,7 @@ metadata:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-100"
     "helm.sh/hook-delete-policy": "before-hook-creation"
-  name: {{ .Release.Name }}-deployment-manager
+  name: {{ .Release.Name }}-database-migration
 rules:
   - apiGroups:
       - extensions
