--- a/helm/patroni-migration/templates/scale-up-deployment-job.yaml
+++ b/helm/patroni-migration/templates/scale-up-deployment-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment-{{ randAlphaNum 5 | lower }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
-    "helm.sh/hook-weight": "-50"
+    "helm.sh/hook-weight": "50"
     "helm.sh/hook-delete-policy": "before-hook-creation"
 spec:
   parallelism: 1
@@ -29,5 +29,5 @@ spec:
           command:
             - "bin/bash"
             - "-c"
-            - "kubectl scale --current-replicas={{ .Values.originalReplicasCount }} --replicas=0 deployment/cas-metabase"
+            - "kubectl scale --replicas=2 deployment/cas-metabase"
       restartPolicy: Never
