chore: deployment name is configurable

--- a/helm/patroni-migration/templates/scale-down-deployment-job.yaml
+++ b/helm/patroni-migration/templates/scale-down-deployment-job.yaml
@@ -29,5 +29,5 @@ spec:
           command:
             - "bin/bash"
             - "-c"
-            - "kubectl scale --current-replicas={{ .Values.originalReplicasCount }} --replicas=0 deployment/cas-metabase"
+            - "kubectl scale --current-replicas={{ .Values.originalReplicasCount }} --replicas=0 deployment/{{ .Values.deployment.name }}"
       restartPolicy: Never
