--- a/helm/patroni-migration/templates/role-binding.yaml
+++ b/helm/patroni-migration/templates/role-binding.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-100"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
