--- a/helm/patroni-migration/templates/role.yaml
+++ b/helm/patroni-migration/templates/role.yaml
@@ -8,7 +8,7 @@ metadata:
     openshift.io/reconcile-protect: "false"
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-100"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
   name: {{ .Release.Name }}-database-migration
 rules:
   - apiGroups:
@@ -23,4 +23,6 @@ rules:
     resources:
       - "deployments/scale"
     verbs:
+      - get
       - patch
+      - update
