--- a/helm/patroni-migration/templates/scale-up-deployment-job.yaml
+++ b/helm/patroni-migration/templates/scale-up-deployment-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment-{{ randAlphaNum 5 | lower }}
+  name: {{ template "patroni-migration.fullname" . }}-scale-up-deployment-{{ randAlphaNum 5 | lower }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "50"
@@ -12,12 +12,12 @@ spec:
   backoffLimit: 10
   template:
     metadata:
-      name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment
+      name: {{ template "patroni-migration.fullname" . }}-scale-up-deployment
       labels: {{ include "patroni-migration.labels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ .Release.Name }}-database-migration
       containers:
-        - name: {{ template "patroni-migration.fullname" . }}-scale-down-deployment
+        - name: {{ template "patroni-migration.fullname" . }}-scale-up-deployment
           resources:
             limits:
               cpu: 100m
@@ -29,5 +29,5 @@ spec:
           command:
             - "bin/bash"
             - "-c"
-            - "kubectl scale --current-replicas=0 --replicas={{ .Values.originalReplicaCount }} deployment/{{ .Values.deployment.name }}"
+            - "kubectl scale --current-replicas=0 --replicas={{ .Values.deployment.originalReplicaCount }} deployment/{{ .Values.deployment.name }}"
       restartPolicy: Never
