--- a/helm/patroni-migration/templates/database-migration-job.yaml
+++ b/helm/patroni-migration/templates/database-migration-job.yaml
@@ -1,7 +1,9 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "patroni-migration.fullname" . }}-migrate-database-{{ randAlphaNum 5 | lower }}
+  name: {{ template "patroni-migration.fullname" . }}-migrate-database
+  labels:
+{{ include "patroni-migration.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "0"
@@ -10,6 +12,8 @@ spec:
   parallelism: 1
   completions: 1
   backoffLimit: 10
+  # It might take up to 10 minutes for the Postgres Operator to be online
+  activeDeadlineSeconds: 600
   template:
     metadata:
       name: {{ template "patroni-migration.fullname" . }}-migrate-database
@@ -90,29 +94,52 @@ spec:
             - name: TARGET_PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  key: port
+                  key: password
                   name: {{ .Values.to.secretName }}
-            - name: TARGET_PGDATABASE
-              valueFrom:
-                secretKeyRef:
-                  key: dbname
-                  name: {{ .Values.to.secretName }}
-
           command:
             - "bin/bash"
             - "-c"
             - |
-              set -euo pipefail;
+              set -eux;
 
-              echo "$SOURCE_PGHOST:$SOURCE_PGPORT:$SOURCE_PGDATABASE:$SOURCE_PGUSER:$SOURCE_PGPASSWORD" >> .source_pgpass
-              echo "$TARGET_PGHOST:$TARGET_PGPORT:$TARGET_PGDATABASE:$TARGET_PGUSER:$TARGET_PGPASSWORD" >> .target_pgpass
+              until PGHOST=$SOURCE_PGHOST PGPORT=$SOURCE_PGPORT PGUSER=$SOURCE_PGUSER PGPASSWORD=$SOURCE_PGPASSWORD pg_isready;
+              do
+                echo "Waiting for source database...";
+                sleep 10;
+              done;
 
-              chmod 0600 .source_pgpass
-              chmod 0600 .target_pgpass
+              until PGHOST=$TARGET_PGHOST PGPORT=$TARGET_PGPORT PGUSER=$TARGET_PGUSER PGPASSWORD=$TARGET_PGPASSWORD pg_isready;
+              do
+                echo "Waiting for target database...";
+                sleep 10;
+              done;
 
-              PGPASSFILE=".source_pgpass" pg_isready
-              PGPASSFILE=".target_pgpass" pg_isready
-              
+              PGHOST=$TARGET_PGHOST \
+              PGPORT=$TARGET_PGPORT \
+              PGUSER=$TARGET_PGUSER \
+              PGPASSWORD=$TARGET_PGPASSWORD \
+              psql < <( \
+                  PGHOST=$SOURCE_PGHOST \
+                  PGPORT=$SOURCE_PGPORT \
+                  PGUSER=$SOURCE_PGUSER \
+                  PGPASSWORD=$SOURCE_PGPASSWORD \
+                  pg_dumpall -g \
+              );
+
+
+              PGHOST=$TARGET_PGHOST \
+              PGPORT=$TARGET_PGPORT \
+              PGUSER=$TARGET_PGUSER \
+              PGPASSWORD=$TARGET_PGPASSWORD \
+              psql < <( \
+                  PGHOST=$SOURCE_PGHOST \
+                  PGPORT=$SOURCE_PGPORT \
+                  PGUSER=$SOURCE_PGUSER \
+                  PGPASSWORD=$SOURCE_PGPASSWORD \
+                  pg_dump -C $SOURCE_PGDATABASE \
+              );
+
+              exit 0;
               
               # while [! ]
               #   pg_isready -d $SOURCE_PGDATABASE -h $SOURCE_PGHOST -p $SOURCE_PGPORT -u $SOURCE_PGUSER 
@@ -126,4 +153,11 @@ spec:
 
               # pg_dumpall (old db) -g | psql (new db) <
               # pg_dump | psql < 
+          volumeMounts:
+            - mountPath: /pgpass/
+              name: pgpass
       restartPolicy: Never
+      volumes:
+        - name: pgpass
+          emptyDir:
+            sizeLimit: 50Mi
