--- a/helm/patroni-migration/templates/scale-up-deployment-job.yaml
+++ b/helm/patroni-migration/templates/scale-up-deployment-job.yaml
@@ -1,7 +1,10 @@
+{{- if eq 1 0 }}
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "patroni-migration.fullname" . }}-scale-up-deployment-{{ randAlphaNum 5 | lower }}
+  name: {{ template "patroni-migration.fullname" . }}-scale-up-deployment
+  labels:
+{{ include "patroni-migration.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "50"
@@ -31,3 +34,4 @@ spec:
             - "-c"
             - "kubectl scale --current-replicas=0 --replicas={{ .Values.deployment.originalReplicaCount }} deployment/{{ .Values.deployment.name }}"
       restartPolicy: Never
+{{- end }}
