--- a/helm/patroni-migration/templates/network-policy.yaml
+++ b/helm/patroni-migration/templates/network-policy.yaml
@@ -9,8 +9,7 @@ metadata:
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-100"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
-    # "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
 spec:
   podSelector:
     matchLabels:
@@ -33,8 +32,7 @@ metadata:
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-100"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
-    # "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed,before-hook-creation"
 spec:
   podSelector:
     matchLabels:
